# AADB-Artifact

./: .gitmodules  README.md  make.py  setup.sh
Graphing Scripts/: compilation_time_norm.csv  plot_compilation_bar.py  plot_grouped_performance_bar.py  plot_performance_bar.py  static_number.py  static_number_4graphs.py  static_number_4graphs_norm.py  static_numbers_old.py
Source/: build_aadb_all.py  build_baseline_all.py  count_static_aadb.py  drop_table_postgressql.sh  make_all_x86.py
llvm-project/llvm/docs/: AliasAnalysis-AAManager.md  HowToAddExternalAliasAnalysis.md
llvm-project/llvm/include/llvm/: InitializePasses.h  LinkAllPasses.h
llvm-project/llvm/include/llvm/Analysis/: AliasGraph.h  SVFsAA.h
llvm-project/llvm/include/llvm/IR/: Metadata.h
llvm-project/llvm/include/llvm/Passes/: PassBuilder.h
llvm-project/llvm/include/llvm/Transforms/Utils/: AnnotateCall.h  AnnotateCallRe.h  AnnotateLoadsStores.h  AnnotateLoadsStoresRe.h  ReorderStore_NN.h  Reorder_NN.h  Reorder_Spec.h
llvm-project/llvm/lib/Analysis/: AliasAnalysis.cpp  AliasSetTracker.cpp  Analysis.cpp  CMakeLists.txt  SVFsAA.cpp
llvm-project/llvm/lib/CodeGen/: MachineFunctionPass.cpp  TargetPassConfig.cpp
llvm-project/llvm/lib/IR/: Metadata.cpp
llvm-project/llvm/lib/Passes/: PassBuilder.cpp  PassBuilderPipelines.cpp  PassRegistry.def
llvm-project/llvm/lib/Transforms/InstCombine/: InstructionCombining.cpp
llvm-project/llvm/lib/Transforms/Scalar/: CMakeLists.txt  EarlyCSE.cpp  GVN.cpp  LowerConstantIntrinsics.cpp
llvm-project/llvm/lib/Transforms/Utils/: AliasTestPass.cpp  AnnotateCall.cpp  AnnotateCallRe.cpp  AnnotateLoadsStoreRe.cpp  AnnotateLoadsStores.cpp  CMakeLists.txt  HelloWorld.cpp  MarkROI.cpp  Reorder.cpp  Reorder_NN.cpp  Reorder_Spec.cpp  Reorder_Spec_NN  Reorderstore.cpp  Reorderstore_NN.cpp  Reorderstore_NN_old  UnrollInnerMostLoop.cpp
llvm-project/llvm/lib/Transforms/Vectorize/: CMakeLists.txt  LoadStoreVectorizer.cpp
